--- a/avaliaçãoTESTE.html
+++ b/avaliaçãoTESTE.html
@@ -421,10 +421,10 @@
                 <span>BlackBurger</span>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Cardápio</a></li>
-                <li><a href="#">Avaliações</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="indexTESTE.html">Início</a></li>
+                <li><a href="testeCardapio.html">Cardápio</a></li>
+                <li><a href="testePedido.html">Pedido</a></li>
+        
             </ul>
         </nav>
     </header>
