--- a/avaliaçãoTESTE.html
+++ b/avaliaçãoTESTE.html
@@ -418,7 +418,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
             <ul class="nav-links">
                 <li><a href="indexTESTE.html">Início</a></li>
@@ -493,7 +493,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
             <p>Onde a arte encontra o sabor</p>
             <div class="social-links">
