--- a/indexTESTE.html
+++ b/indexTESTE.html
@@ -420,7 +420,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
             <ul class="nav-links">
                 <li><a href="testeCardapio.html">Cardápio</a></li>
@@ -628,7 +628,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
             <p>Onde a arte encontra o sabor</p>
             <div class="social-links">
