--- a/testePedido.html
+++ b/testePedido.html
@@ -453,7 +453,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
             <ul class="nav-links">
                 <li><a href="indexTESTE.html">Início</a></li>
