--- a/cadastroTESTE.html
+++ b/cadastroTESTE.html
@@ -242,7 +242,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
         </nav>
     </header>
