--- a/testeCardapio.html
+++ b/testeCardapio.html
@@ -399,7 +399,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
             <ul class="nav-links">
                 <li><a href="indexTESTE.html">Início</a></li>
@@ -595,7 +595,7 @@
         <div class="footer-content">
             <div class="footer-logo">
                 <i class="fas fa-hamburger"></i>
-                <span>BlackBurger</span>
+                <span>Gourmet Burger</span>
             </div>
             <p>Onde a arte encontra o sabor</p>
             <div class="social-links">
