--- a/cadastroTESTE.html
+++ b/cadastroTESTE.html
@@ -406,7 +406,7 @@
                     sessionStorage.setItem('currentUser', JSON.stringify(user));
                     
                     // Redirecionar para a página inicial
-                    window.location.href = 'index.html'; // Altere para o nome da sua página inicial
+                    window.location.href = 'indexTESTE.html'; // Altere para o nome da sua página inicial
                 } else {
                     alert('Email ou senha incorretos!');
                 }
